Initial commit - setup main page, animations, experience added, tools, etc.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <span class="prompt">aaryansoni@macbook:~$</span>
                                 <span class="command">whoami</span>
                             </div>
-                            <div class="terminal-line output">Frontend Developer & Penetration Testing Enthusiast</div>
+                            <div class="terminal-line output">Frontend Developer, Gamer & Pen Testing Enthusiast</div>
                             <div class="terminal-line">
                                 <span class="prompt">aaryansoni@macbook:~$</span>
                                 <span class="command">ls ./skills</span>
@@ -245,7 +245,7 @@
                                 <i class="fab fa-apple" aria-hidden="true"></i>
                             </div>
                             <div class="setup-info">
-                                <h5>macOS Sequoia 15.4</h5>
+                                <h5>macOS Sequoia 15.5</h5>
                                 <p>Running on outdated 2017 hardware via OCLP root patching</p>
                             </div>
                         </div>
@@ -698,7 +698,7 @@
                 <!-- YouTube Channel -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/placeholder.svg?height=300&width=500&text=How+Tf+YouTube" alt="How Tf YouTube Channel">
+                        <img src="media/pfp.png?height=300&width=500&text=How+Tf+YouTube" alt="How Tf YouTube Channel">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link" aria-label="Visit YouTube channel">
@@ -721,13 +721,18 @@
                             <span class="tech-tag">Education</span>
                             <span class="tech-tag">Animation</span>
                         </div>
+                        <div class="project-status">
+                            <i class="fas fa-code" aria-hidden="true"></i>
+                            In Development
+                        </div>
                     </div>
+
                 </div>
 
                 <!-- Web Design Business -->
-                <div class="project-card">
+                <div class="project-card featured">
                     <div class="project-image">
-                        <img src="/placeholder.svg?height=300&width=500&text=Web+Design+Business" alt="Web Design Portfolio">
+                        <img src="media/DesignoLogo.png?height=300&width=500&text=Web+Design+Business" alt="Web Design Portfolio">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link" aria-label="View portfolio">
@@ -737,6 +742,7 @@
                         </div>
                     </div>
                     <div class="project-content">
+                        <div class="project-badge">Featured</div>
                         <h3>Web Design Business</h3>
                         <p>
                             Designing functional and clean websites for friends, family, and small businesses.
@@ -747,6 +753,32 @@
                             <span class="tech-tag">Responsive Design</span>
                             <span class="tech-tag">Performance</span>
                             <span class="tech-tag">UX/UI</span>
+                            <span class="tech-tag">Freelancing</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="media/mafia.png?height=300&width=500&text=Mafia+Role+Generator" alt="Mafia Role Generator">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="#" class="project-link" aria-label="View portfolio">
+                                    <i class="fas fa-external-link-alt" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Mafia Game Role Generator</h3>
+                        <p>
+                            A user-friendly, experience-focused, clean, and functional role randomizer for the popular family game Mafia.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML/CSS/JS</span>
+                            <span class="tech-tag">Responsive Design</span>
+                            <span class="tech-tag">UX/UI</span>
+                            <span class="tech-tag">Games</span>
                         </div>
                     </div>
                 </div>
@@ -754,7 +786,7 @@
                 <!-- Custom Scripts & Tools -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/placeholder.svg?height=300&width=500&text=Custom+Scripts" alt="Custom Development Tools">
+                        <img src="media/scripts.jpeg?height=300&width=500&text=Custom+Scripts" alt="Custom Development Tools">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link" aria-label="View scripts repository">
@@ -781,7 +813,7 @@
 
             <div class="projects-cta">
                 <p>Want to see more of my work?</p>
-                <a href="https://github.com" target="_blank" rel="noopener noreferrer" class="cta-btn primary">
+                <a href="https://github.com/RuntimeTerror2021" target="_blank" rel="noopener noreferrer" class="cta-btn primary">
                     <i class="fab fa-github" aria-hidden="true"></i>
                     View All Projects on GitHub
                 </a>
@@ -987,7 +1019,7 @@
                             </div>
                             <div class="contact-details">
                                 <h4>Email</h4>
-                                <a href="mailto:Aaryan@example.com">Aaryan@example.com</a>
+                                <a href="mailto:soniaaryan096@gmail.com">soniaaryan096@gmail.com</a>
                                 <p>Best way to reach me</p>
                             </div>
                         </div>
@@ -1009,7 +1041,7 @@
                             </div>
                             <div class="contact-details">
                                 <h4>GitHub</h4>
-                                <a href="https://github.com" target="_blank" rel="noopener noreferrer">View my code</a>
+                                <a href="https://github.com/RuntimeTerror2021" target="_blank" rel="noopener noreferrer">View my code</a>
                                 <p>Open source contributions</p>
                             </div>
                         </div>
@@ -1099,7 +1131,7 @@
                     full-stack development, and solving complex problems.
                 </p>
                 <div class="footer-social">
-                    <a href="https://github.com" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                    <a href="https://github.com/RuntimeTerror2021" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                         <i class="fab fa-github" aria-hidden="true"></i>
                     </a>
                     <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
@@ -1108,7 +1140,7 @@
                     <a href="https://youtube.com" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
                         <i class="fab fa-youtube" aria-hidden="true"></i>
                     </a>
-                    <a href="mailto:Aaryan@example.com" aria-label="Email">
+                    <a href="mailto:soniaaryan096@gmail.com" aria-label="Email">
                         <i class="fas fa-envelope" aria-hidden="true"></i>
                     </a>
                 </div>
@@ -1141,11 +1173,11 @@
                 <div class="footer-contact">
                     <p>
                         <i class="fas fa-envelope" aria-hidden="true"></i>
-                        Aaryan@example.com
+                        soniaaryan096@gmail.com
                     </p>
                     <p>
                         <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
-                        United States
+                        Chicago, United States
                     </p>
                     <p>
                         <i class="fas fa-clock" aria-hidden="true"></i>
@@ -1156,7 +1188,12 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 Aaryan Soni. All rights reserved.</p>
+<!--            <a href="https://creativecommons.org">Untitled</a> © 1999 by <a href="https://creativecommons.org">Jane Doe</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/nd.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">-->
+            <p>&copy; 2025 Aaryan Soni. Licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>
+<!--                <img class="cc-icon" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">-->
+<!--                <img class="cc-icon" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">-->
+<!--                <img class="cc-icon" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;">-->
+<!--                <img class="cc-icon" src="https://mirrors.creativecommons.org/presskit/icons/nd.svg" style="max-width: 1em;max-height:1em;margin-left: .2em;"></p>-->
             <div class="footer-bottom-links">
                 <a href="#privacy">Privacy Policy</a>
                 <a href="#terms">Terms of Service</a>
