Fix bundling of main.js and privacy.html

--- a/index.html
+++ b/index.html
@@ -1228,6 +1228,6 @@
 </button>
 
 <!-- Scripts -->
-<script src="src/main.js"></script>
+<script src="src/main.js" type="module"></script>
 </body>
 </html>
