fix form handling

--- a/index.html
+++ b/index.html
@@ -1070,9 +1070,9 @@
                 </div>
 
                 <div class="contact-form-container">
-                    <form action="https://api.web3forms.com/submit" class="contact-form" id="contactForm" method="POST">
+                    <form action="https://formsubmit.co/aasoni.dev@gmail.com" class="contact-form" id="contactForm" method="POST">
 
-                        <input type="hidden" name="apikey" value="b7acc05f-4597-4ad6-8584-b6a40c21b23d">
+<!--                        <input type="hidden" name="apikey" value="b7acc05f-4597-4ad6-8584-b6a40c21b23d">-->
 <!--                        <input type="hidden" name="access_key" value="b7acc05f-4597-4ad6-8584-b6a40c21b23d">-->
 
                         <h3>Send a Message</h3>
@@ -1117,9 +1117,8 @@
                             <span class="error-message" id="message-error"></span>
                         </div>
 
-                        <input type="hidden" name="subject" value="New Submission from Portfolio Site">
-                        <input type="hidden" name="redirect" value="https://web3forms.com/success">
-                        <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+                        <input type="hidden" name="_subject" value="New Submission from Portfolio Site">
+                        <input type="hidden" name="_captcha" value="true">
 
                         <button type="submit" class="cta-btn primary large">
                             <i class="fas fa-paper-plane" aria-hidden="true"></i>
